[gd_scene load_steps=12 format=3 uid="uid://d2bsjmqg1fe1h"]

[ext_resource type="Script" path="res://src/entities/player/player_entity.gd" id="1_7c5ui"]
[ext_resource type="Texture2D" uid="uid://dayf0y6nyidev" path="res://icon.svg" id="2_fym7o"]
[ext_resource type="Script" path="res://src/entities/player/user_movement_component.gd" id="2_xekry"]
[ext_resource type="Script" path="res://src/entities/animated_sprite_component.gd" id="3_t82yd"]
[ext_resource type="SpriteFrames" uid="uid://dljijosh7tmgp" path="res://assets/sprites/player_tmp.tres" id="5_0x5y7"]
[ext_resource type="Script" path="res://src/entities/player/user_mouse_shooting_component.gd" id="7_ls8cw"]
[ext_resource type="PackedScene" uid="uid://cepkdm0iul06" path="res://src/entities/hitbox_component.tscn" id="8_tbtis"]
[ext_resource type="Script" path="res://src/entities/player/player_stats_component.gd" id="8_y5dsv"]
[ext_resource type="Script" path="res://src/systems/movement/four_direction_animation_system_extra.gd" id="9_b4i7k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eip8d"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kummr"]
size = Vector2(32, 32)

[node name="PlayerEntity" type="CharacterBody2D" node_paths=PackedStringArray("_UserMovementComponent", "_AnimatedSpriteComponent")]
z_index = 1
collision_mask = 2
script = ExtResource("1_7c5ui")
_UserMovementComponent = NodePath("Components/UserMovementComponent")
_AnimatedSpriteComponent = NodePath("Components/AnimatedSpriteComponent")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_eip8d")

[node name="bc" type="Sprite2D" parent="."]
modulate = Color(0.666667, 0.0509804, 0.270588, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_fym7o")

[node name="Components" type="Node2D" parent="."]

[node name="UserMovementComponent" type="Node" parent="Components"]
script = ExtResource("2_xekry")

[node name="AnimatedSpriteComponent" type="Node2D" parent="Components"]
script = ExtResource("3_t82yd")

[node name="Sprite" type="AnimatedSprite2D" parent="Components/AnimatedSpriteComponent"]
sprite_frames = ExtResource("5_0x5y7")
animation = &"idle_up_right"

[node name="UserMouseShootingComponent" type="Node" parent="Components" node_paths=PackedStringArray("_StatsComponent", "_MovementComponent")]
script = ExtResource("7_ls8cw")
_StatsComponent = NodePath("../PlayerStatsComponent")
_MovementComponent = NodePath("../UserMovementComponent")

[node name="PlayerStatsComponent" type="Node" parent="Components"]
script = ExtResource("8_y5dsv")

[node name="HitboxComponent" parent="Components" node_paths=PackedStringArray("_StatsComponent") instance=ExtResource("8_tbtis")]
collision_mask = 16
_StatsComponent = NodePath("../PlayerStatsComponent")

[node name="Hitbox" type="CollisionShape2D" parent="Components/HitboxComponent"]
shape = SubResource("RectangleShape2D_kummr")

[node name="FourDirectionMovementSystemExtra" type="Node" parent="Components" node_paths=PackedStringArray("_MovementComponent", "_AnimatedSpriteComponent", "_ShootingComponent")]
script = ExtResource("9_b4i7k")
_MovementComponent = NodePath("../UserMovementComponent")
_AnimatedSpriteComponent = NodePath("../AnimatedSpriteComponent")
_ShootingComponent = NodePath("../UserMouseShootingComponent")
